[package]
name = "memoro_paper_wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Shamir secret sharing (WASM-friendly)
sharks = "0.5"

# Crypto + utilities
getrandom = { version = "0.2", features = ["js"] }
aes-gcm = "0.10"               # 256-bit supported automatically if key = 32 bytes
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
base64 = "0.22"
data-encoding = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
